syntax = "proto3";
package user_center;

import "proto/base/base.proto";
message User
{
    int32 id = 1;
    string username = 2;
    string password = 3;
}

message UserExtra
{
    int32 id = 1;
    int32 user_id = 2;
    string nickname = 3;
    string email = 4;
    string phone_number = 5;
    string avatar_url = 6;
}

message RegisterRequest
{
    User user = 1;
    UserExtra user_extra = 2;

    base.Base base = 255;
}

message RegisterResponse
{
    int32 id = 1;

    base.BaseResp base_resp = 255;
}

message LoginRequest
{
    string username = 1;
    string password = 2;

    base.Base base = 255;
}

message LoginResponse
{
    string access_token = 1;
    string refresh_token = 2;
    int64 access_exp = 3;
    int64 refresh_exp = 4;

    base.BaseResp base_resp = 255;
}

//删除账户
message DeleteRequest
{
    int32 id = 1;
}

message DeleteResponse
{
    base.BaseResp base_resp = 255;
}

message CheckTokenRequest {
    string token = 1;
    bool isRefresh = 2;
    
    base.Base base = 255;
}

message UserInfo {
    int32 user_id = 1;
    string username = 2;
    string nickname = 3;
    string email = 4;
    string phone_number = 5;
    string avatar_url = 6;
}

message CheckTokenResponse {
    UserInfo user = 1;

    base.BaseResp base_resp = 255;
}

message RefreshRequest {
    string refresh_token = 1;

    base.Base base = 255;
}

message RefreshResponse {
    string access_token = 1;
    string refresh_token = 2;
    int64 access_exp = 3;
    int64 refresh_exp = 4;
    
    base.BaseResp base_resp = 255;
}

// group相关协议

message Group {
    uint32 id = 1;
    uint64 created_at = 2;
    uint64 updated_at = 3;
    uint32 owner_id = 4;
    string group_name = 5;
}

message CreateGroupRequest {
    uint32 owner_id = 1;
    string group_name = 2;

    base.Base base = 255;
}

message CreateGroupResponse {
    Group group = 1;

    base.BaseResp base_resp = 255;
}

message JoinGroupRequest {
    uint32 user_id = 1;
    uint32 group_id = 2;

    base.Base base = 255;
}

message JoinGroupResponse {
    base.BaseResp base_resp = 255;
}

message ExitGroupRequest {
    uint32 user_id = 1;
    uint32 group_id = 2;

    base.Base base = 255;
}

message ExitGroupResponse {
    base.BaseResp base_resp = 255;
}

message GetGroupRequest {
    Group group_info = 1;
    uint32 member_id = 2;
    base.Base base = 255;
}

message GetGroupResponse {
    repeated Group groups = 1;

    base.BaseResp base_resp = 255;
}

message GetGroupMembersRequest {
    uint32 group_id = 1;

    base.Base base = 255;
}

message GetGroupMembersResponse {
    repeated UserExtra members = 1;

    base.BaseResp base_resp = 255;
}

message GetUserInfoRequest {
    uint32 user_id = 1;
    string username = 2;

    base.Base base = 255;
}

message GetUserInfoResponse {
    UserExtra user_info = 1;
    string username = 2;
    
    base.BaseResp base_resp = 255;
}

service UserCenter
{
// 账户相关
    rpc Register(RegisterRequest) returns(RegisterResponse) {}
    rpc Login(LoginRequest) returns (LoginResponse) {}
    rpc Delete(DeleteRequest) returns (DeleteResponse) {}
    rpc CheckToken(CheckTokenRequest) returns (CheckTokenResponse) {}
    rpc Refresh(RefreshRequest) returns (RefreshResponse) {}
    rpc GetUserInfo(GetUserInfoRequest) returns (GetUserInfoResponse) {}
// 组织管理相关
    rpc CreateGroup(CreateGroupRequest) returns (CreateGroupResponse) {}
    rpc GetGroup(GetGroupRequest) returns (GetGroupResponse) {}
    rpc GetGroupMembers(GetGroupMembersRequest) returns (GetGroupMembersResponse) {}
    rpc JoinGroup(JoinGroupRequest) returns (JoinGroupResponse) {}
    rpc ExitGroup(ExitGroupRequest) returns (ExitGroupResponse) {}
}